k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wilbeth
  namespace: <NAMESPACE>
  labels:
    app: wilbeth
spec:
  type: ClusterIP
  selector:
    app: wilbeth
  ports:
    - name: http
      port: 80
      targetPort: 8000
